Fix: Further adjust mobile spacing to ensure 'Hello, I am' line is visible

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -39,7 +39,7 @@
       padding-top: 80px;
     }
     #profile {
-      padding-top: 80px;
+      padding-top: 100px;
     }
     .section__pic-container {
       width: 275px;
@@ -59,7 +59,7 @@
     #profile {
       height: 83vh;
       margin-bottom: 0;
-      padding-top: 80px;
+      padding-top: 120px;
     }
     article {
       font-size: 1rem;
